--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,10 @@
 name: Deploy to cPanel via FTP
 
-on:
+  on:
   push:
     branches:
-      - main   # Runs when you push to main branch
-  workflow_dispatch: # Allows manual trigger
+      - master
+  workflow_dispatch:
 
 jobs:
   ftp-deploy:
